<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Virtual Boathouse</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_timers">Boat Timers</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">Set Up Timers</string>
    <string name="hello_text">Hello, World!</string>
    <string name="button_stop">Stop</string>
    <string name="button_start">Start</string>
    <string name="button_clear">Clear</string>
    <string name="button_reset">Reset</string>
    <string name="enter_num_timers">Enter a number of timers (boats):</string>
    <string name="button_go">Go!</string>
    <string name="blank"></string>
    <string name="timer_name_text">" Boat"</string>
    <string name="title_activity_splashscreenactivity">Virtual Boathouse</string>
    <string name="save_times">Save Times</string>
    <string name="stop_all">Stop All</string>
    <string name="start_all">Start All</string>
    <string name="clear_all">Clear All</string>
    <string name="button_record_times">Record Times</string>
    <string name="button_change_lineups">Change Lineups</string>
    <string name="dialog_message">Saved!</string>
    <string name="title_activity_pick_dist_time">Set Up Distance/Time</string>
    <string name="enter_distance">Enter racing distance:</string>
    <string name="api_url">https://cos333.herokuapp.com/json/</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="copyright_info">&#169; 2014, VirtualBoathouse Inc.</string>
    <string name="title_activity_countdown">Countdown Timer</string>
    <string name="or_text">Or</string>
    <string name="enter_time_text">Enter racing time:</string>
    <string name="pick_disttime_error_message">You must enter either a distance or a time!</string>
    <string name="login">Login</string>
    <string name="currently_loggedin_text">Currently logged in as:</string>
    <string name="action_logout">Logout</string>
    <string name="colon_separator">:</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="meters">meters</string>
    <string name="invalid_time_error_message">Please enter a valid time. Minutes: 0&#8211;59 and Seconds: 0&#8211;59</string>
    <string name="invalid_boats_error_message">Please enter a valid number of boats: (1&#8211;50).</string>
    <string name="invalid_distance_error_message">Please enter a valid distance: (1&#8211;10,000,000).</string>
    <string name="invalid_lineup_error_message">This looks like an invalid set of lineups. Please correct the lineups to continue.</string>
    <string name="title_activity_change_linups">Change Lineups</string>
    <string name="hello_world">Hello world!</string>
    <string name="get_lineups_text">Get lineups</string>
    <string name="title_activity_pick_boats">Set Up Number of Boats</string>
    <string name="title_activity_crew_selector">Select Crews</string>
    <string name="select_crews_text">Select Crews</string>
    <string name="update_text">Sync data</string>
    <string name="last_updated_text">"last updated: "</string>
    <string name="save_piece">save piece</string>
    <string name="notes">Enter notes on piece&#8230;</string>
    <string name="direction">Enter name of piece</string>
    <string name="new_piece">New Piece</string>
    <string name="finish_practice">Finish Practice</string>
    <string name="get_stroke_rate">Get Stroke Rate</string>
    <string name="dragging_explanation">To make a swap, hold and drag the athletes to their new locations</string>
	<string name="done">Done</string>
	<string name="just_now">just now</string>
	<string name="strokes_per_minute">SPM</string>
	<string name="then_text">Then</string>
	<string name="and_text">and</string>
	<string name="cancel_text">Cancel</string>
	<string name="need_to_sync">Changes to be synced</string>
	<string name="no_selected_crews">There are no crews selected. To get stroke rates and times for unsaved boats, enter the number of boats below (default is 3):</string>
	<string name="error_save_times_generic">You cannot save times for generic crews. Return to home screen?</string>
	<string name="num_generic_boats_hint">1 &#8211; 50</string>
	<string name="confirm_finish_practice">Do you really want to finish this practice?</string>
	<string name="crew_selector_instructions">Select the crews with which you wish to record pieces.\n\nIf you wish to reset to the current Practices\' original lineups, press \'Sync data\' from the home screen.\n\nSelect none if you wish to continue with generic boats.</string>
	<string name="noLineups">\nNo lineups sent from the server. \nPlease go to the web app to create lineups, or use generic timers by clicking \"Go!\".</string>
	
    <!-- These strings are used for accessing resources -->
    <string name="SHARED_PREFS_FILE">com.vbh.virtualboathouse.DATA_STRUCTURES_IDS</string>
    <string name="CURRENT_PRACTICE_ID">CURRENT_PRACTICE_ID</string>
    <string name="CURRENT_PIECE_ID">CURRENT_PIECE_ID</string>
    <string name="PRACTICE_TO_UPLOAD_ID">PRACTICE_TO_UPLOAD_ID</string>
    <string name="DATA_SET_CHANGED">DATA_SET_CHANGED</string>
    <string name="DIRECTION_TEXT">DIRECTION_TEXT_BUNDLE</string>
    <string name="NOTES_TEXT">NOTES_TEXT_BUNDLE</string>
    <string name="ROSTER_FILE">com.vbh.virtualboathouse.RosterData</string>
    <string name="BOATS_FILE">com.vbh.virtualboathouse.BoatData</string>
    <string name="PIECE_ID_FILE">com.vbh.virtualboathouse.PieceIDData</string>
    <string name="PRACTICE_FILE">com.vbh.virtualboathouse.PracticeData</string>
    <string name="RECENT_LINEUP_FILE">com.vbh.virtualboathouse.RecentLineupData</string>

    <!-- Extras for intents -->
    <string name="CURRENT_NUM_BOATS">current_num_boats</string>
    <string name="title_activity_pick_new_piece">Enter piece details</string>
    <string name="title_activity_pick_type_of_swap">PickTypeOfSwap</string>
    <string name="ACTIVITY_FROM">activity_from</string>
    <string name="title_activity_practice_view">PracticeViewActivity</string>
    
    <!-- For bundling -->
    <string name="DISTANCE_TEXT">distanceTextPDTA</string>
    <string name="TIME_MIN_TEXT">timeMinTextPDTA</string>
    <string name="TIME_SEC_TEXT">timeSecTextPDTA</string>
    <string name="CHECKBOX_STATES">checkboxStatesCSA</string>

</resources>
