<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.vbh.virtualboathouse.PickNewPieceActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/direction_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:gravity="center|bottom"
        android:hint="@string/direction"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/notes_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/direction_text"
        android:layout_below="@id/direction_text"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/notes"
        android:inputType="textAutoCorrect"
        android:maxLines="8"
        android:minLines="3"
        android:scrollbars="vertical" >
    </EditText>

    <Button
        android:id="@+id/change_lineups_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notes_text"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/button_change_lineups"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/new_piece_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_lineups_button"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/new_piece"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/finish_practice_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/finish_practice"
        android:textColor="@android:color/white" />

</RelativeLayout>
