<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vbh.virtualboathouse.PickDistTimeActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/enter_distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/enter_distance"
        android:textSize="20sp" />
    
    <EditText
        android:id="@+id/enter_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_distance_text"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>
    
    <TextView 
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_distance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/or_text"
        android:textSize="35sp" />
    
    <TextView
        android:id="@+id/enter_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/enter_time_text"
        android:textSize="20sp" />
    
    <EditText
        android:id="@+id/enter_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_time_text"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="time"
        android:textAlignment="center"
        android:textSize="20sp" >

    </EditText>

    <Button
        android:id="@+id/goPickPiece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/button_go" />

    

</RelativeLayout>