<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.vbh.virtualboathouse.Splashscreenactivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/record_times_button"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1"
		android:padding="25dp"
        android:text="@string/button_record_times"
        android:drawableLeft="@drawable/ic_timer"
        android:textSize="20sp" />
    <View
  		android:layout_width="0dp"
  		android:layout_height="10dp">
	</View>

    <Button
        android:id="@+id/change_lineups_button"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:padding="25dp"
        android:text="@string/button_change_lineups"
        android:drawableLeft="@drawable/ic_row"
        android:textSize="20sp" />
    <View 
        android:layout_width="0dp"
        android:layout_height="40dp">
    </View>
    
    <TextView 
        android:id="@+id/login_text"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14sp"
        android:textColor="#708090"
        android:text="@string/currently_loggedin_text">
   </TextView>

    <TextView
        android:id="@+id/textView1"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
     <TextView
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
