<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vbh.virtualboathouse.DisplayTimersActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:id="@+id/timer_container"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context="com.vbh.virtualboathouse.DisplayTimersActivity"
        tools:ignore="MergeRootFrame" >

        <TextView
            android:id="@+id/field"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start_button"
            android:layout_alignParentTop="true"
            android:layout_marginTop="31dp"
            android:ems="10" />

        <com.vbh.virtualboathouse.MilliChrono
            android:id="@+id/millichrono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/field"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="20dp"
            android:text="@string/blank"
            android:textSize="50sp" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/start_button"
            android:layout_alignBottom="@+id/start_button"
            android:layout_alignRight="@+id/millichrono"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/millichrono"
            android:layout_below="@+id/millichrono"
            android:text="@string/button_start" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/clear_button"
            android:layout_alignBottom="@+id/clear_button"
            android:layout_toLeftOf="@+id/clear_button"
            android:text="@string/button_stop" />
    </RelativeLayout>

<RelativeLayout
    android:id="@+id/timer2_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.vbh.virtualboathouse.DisplayTimersActivity"
    tools:ignore="MergeRootFrame"
    android:layout_weight="1" >

    <com.vbh.virtualboathouse.MilliChrono
        android:id="@+id/millichrono2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/field2"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/blank"
        android:textSize="50sp" />

    <Button
        android:id="@+id/clear_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start_button2"
        android:layout_alignBottom="@+id/start_button2"
        android:layout_alignRight="@+id/millichrono2"
        android:text="@string/button_stop" />

    <Button
        android:id="@+id/start_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/millichrono2"
        android:layout_below="@+id/millichrono2"
        android:text="@string/button_start" />

    <Button
        android:id="@+id/stop_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clear_button2"
        android:layout_alignBottom="@+id/clear_button2"
        android:layout_toLeftOf="@+id/clear_button2"
        android:text="@string/button_stop" />

    <TextView
        android:id="@+id/field2"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10" />

</RelativeLayout>
</LinearLayout>